// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Melody flourishes into a nice little application if the conditions are right 1`] = `
<div class="Melody Melody--stopped">
  <div class="melody__viewContainer" data-melody-view="slider">
    <div class="preview melody-c-preview-bg melody-c-preview-min-height melody-c-preview-padding">
      <ul class="Slideshow preview__slideshow melody-c-slider-transition melody-c-slider-timing"
      style="transform: translate3d(0%, 0px, 0px);">
        <li class="Slideshow__slide">
          <figure class="Slideshow__image melody-c-artwork-size melody-c-artwork-repeat melody-c-artwork-position melody-c-artwork-attachment"
          style="background-image: url();"></figure>
        </li>
      </ul>
      <div class="preview__header">
        <div class="melody-c-vol-primary-color melody-c-vol-hover-color melody-c-vol-width volumeCtrl">
          <svg class="volumeCtrl__icon elementor-tab-title" xmlns="http://www.w3.org/2000/svg"
          viewBox="0 0 24 24">
            <circle class="volumeCtrl__levelOutline" cx="12" cy="12" r="12"></circle>
            <circle class="volumeCtrl__level" style="stroke-dashoffset: 0;"
            cx="12" cy="12" r="12"></circle>
            <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"></path>
          </svg>
        </div>
        <div class="dock ">
          <button class="btn dock__toggle " role="button">
            <svg class="dock__toggleIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
              <path d="M19.43 12.98c.04-.32.07-.64.07-.98s-.03-.66-.07-.98l2.11-1.65c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.3-.61-.22l-2.49 1c-.52-.4-1.08-.73-1.69-.98l-.38-2.65C14.46 2.18 14.25 2 14 2h-4c-.25 0-.46.18-.49.42l-.38 2.65c-.61.25-1.17.59-1.69.98l-2.49-1c-.23-.09-.49 0-.61.22l-2 3.46c-.13.22-.07.49.12.64l2.11 1.65c-.04.32-.07.65-.07.98s.03.66.07.98l-2.11 1.65c-.19.15-.24.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1c.52.4 1.08.73 1.69.98l.38 2.65c.03.24.24.42.49.42h4c.25 0 .46-.18.49-.42l.38-2.65c.61-.25 1.17-.59 1.69-.98l2.49 1c.23.09.49 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.65zM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5z"></path>
            </svg>
          </button>
        </div>
      </div>
      <div class="preview__marquee">
        <p class="preview__title melody-c-title-font melody-c-title-shadow melody-c-title-color">lol-title</p>
        <p class="preview__artist melody-c-artist-font melody-c-artist-shadow melody-c-artist-color">lol-artist</p>
      </div>
      <div class="preview__glider">
        <div class="glider elementor-tab-title">
          <div class="glider__playback">
            <div class="glider__trackbar" style="margin-left: 0%;" data-melody-scrubber-progress>
              <div class="glider__handle" data-melody-scrubber-handle></div>
            </div>
          </div>
        </div>
      </div>
      <div class="preview__footer">
        <span class="preview__time melody-c-time-font melody-c-time-shadow melody-c-time-color">0:00</span>
        <span class="preview__time melody-c-time-font melody-c-time-shadow melody-c-time-color">0:00</span>
      </div>
    </div>
    <div class="controlbar melody-c-controlbar melody-control-bar">
      <button class="btn melody-c-btn-primary-color melody-c-btn-hover-color melody-c-btn-space playbackCtrl melody-playbackCtrl melody-shuffle"
      role="button">
        <svg class="playbackCtrl__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
          <path d="M7 7h10v3l4-4-4-4v3H5v6h2V7zm10 10H7v-3l-4 4 4 4v-3h12v-6h-2v4z"></path>
        </svg>
      </button>
      <button class="btn melody-c-btn-primary-color melody-c-btn-hover-color melody-c-btn-space playbackCtrl melody-playbackCtrl playbackCtrl--disabled"
      role="button">
        <svg class="playbackCtrl__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
          <path d="M11 18V6l-8.5 6 8.5 6zm.5-6l8.5 6V6l-8.5 6z"></path>
        </svg>
      </button>
      <button data-playbackRate class="btn melody-c-btn-primary-color melody-c-btn-hover-color melody-c-btn-space playbackCtrl melody-playbackCtrl melody-controlBar__catalyst"
      role="button">
        <svg class="playbackCtrl__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
          <g>
            <circle class="melody-playbackCtrl__ring" cx="12" cy="12" r="12"></circle>
            <path d="M8 5v14l11-7z"></path>
          </g>
        </svg>
      </button>
      <button class="btn melody-c-btn-primary-color melody-c-btn-hover-color melody-c-btn-space playbackCtrl melody-playbackCtrl playbackCtrl--disabled"
      role="button">
        <svg class="playbackCtrl__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
          <path d="M4 18l8.5-6L4 6v12zm9-12v12l8.5-6L13 6z"></path>
        </svg>
      </button>
      <button class="btn melody-c-btn-primary-color melody-c-btn-hover-color melody-c-btn-space playbackCtrl melody-playbackCtrl melody-repeat"
      role="button">
        <svg class="playbackCtrl__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
          <path d="M12 5V1L7 6l5 5V7c3.31 0 6 2.69 6 6s-2.69 6-6 6-6-2.69-6-6H4c0 4.42 3.58 8 8 8s8-3.58 8-8-3.58-8-8-8z"></path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Melody renders an editor specific error message if there arent any tracks 1`] = `
<div class="errorContainer">
  <p class="melody__body">No tracks loaded, click here to get started.</p>
</div>
`;

exports[`Melody renders an error if the currentState is fault 1`] = `
<div class="errorContainer">
  <span>
    <svg class="errorContainer__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
      <path d="m110 150 20 0 0 20-20 0zm0-80 20 0 0 60-20 0zm9.9-50C64.7 20 20 64.8 20 120 20 175.2 64.7 220 119.9 220 175.2 220 220 175.2 220 120 220 64.8 175.2 20 119.9 20Zm0.1 180c-44.2 0-80-35.8-80-80 0-44.2 35.8-80 80-80 44.2 0 80 35.8 80 80 0 44.2-35.8 80-80 80z"></path>
    </svg>
    <p class="melody__body">Something went wrong!</p>
  </span>
  <button class="btn errorContainer__reloadBtn" role="button">Reload</button>
</div>
`;

exports[`Melody renders an error if there arent any tracks 1`] = `
<div class="errorContainer">
  <p class="melody__body">Doh! It looks like there aren't any tracks loaded.</p>
</div>
`;
